--- a/createuser.yaml
+++ b/createuser.yaml
@@ -10,21 +10,11 @@
         shell: /bin/bash
         create_home: yes
 
-    - name: Create the sudoers file for ansible_user if it doesn't exist
-      ansible.builtin.file:
-        path: /etc/sudoers.d/ansibleuser
-        state: touch
-        owner: root
-        group: root
-        mode: '0440'
-
-    - name: Configure passwordless sudo for the user
-      ansible.builtin.copy:
-        dest: /etc/sudoers.d/ansibleuser
-        content: "ansibleuser ALL=(ALL) NOPASSWD:ALL\n"
-        owner: root
-        group: root
-        mode: '0440'
+    - name: Add ansible_user to the wheel group
+      ansible.builtin.group:
+        name: wheel
+        members: ansible_user
+        append: yes
 
     - name: Ensure authorized_keys file exists for ansible_user
       ansible.builtin.file:
